adicionando procura de produto por categoria, ajustes no mapping e no doc do swagger
